@@ -12,16 +12,16 @@ versions (Davison and Hinkley (1997), ISBN:978-0-511-80284-3) as well as
 Hsu (Hedderich and Sachs (2018), ISBN:978-3-662-56657-2), 
 permutation (Janssen (1997), <doi:10.1016/S0167-7152(97)00043-6>), 
 bootstrap (Davison and Hinkley (1997), ISBN:978-0-511-80284-3) and 
-multiple imputation (Barnard and Rubin (1999), <doi:10.1093/biomet/86.4.948>) t-test.
-Graphical visualization by volcano and Bland-Altman plots (Bland and Altman (1986), 
-<doi:10.1016/S0140-6736(86)90837-8>; Shieh (2018), <doi:10.1186/s12874-018-0505-y>).
+multiple imputation (Barnard and Rubin (1999), <doi:10.1093/biomet/86.4.948>) t-test
+and Wilcoxon tests. Graphical visualization by volcano and Bland-Altman plots 
+(Bland and Altman (1986), <doi:10.1016/S0140-6736(86)90837-8>; Shieh (2018), <doi:10.1186/s12874-018-0505-y>).
 }
 \details{
 \tabular{ll}{
 Package: \tab MKinfer\cr
 Type: \tab Package\cr
 Version: \tab 1.1\cr
-Date: \tab 2023-04-16\cr
+Date: \tab 2023-04-17\cr
 Depends: \tab R(>= 4.0.0)\cr
 Imports: \tab stats, MKdescr, boot, arrangements, nlme, ggplot2, exactRankTests\cr
 Suggests: \tab Amelia, knitr, rmarkdown, mice, miceadds\cr
