@@ -1,3 +1,10 @@
+@book{Heymans2019,
+          editor = {Heymans W. Martin and Eekhout Iris},
+           title = {{Applied Missing Data Analysis With SPSS and (R)Studio}},
+       publisher = {Self-publishing},
+            year = {2019},
+             url = {https://bookdown.org/mwheymans/bookmi/},
+}
 @book{Altman2000,
           editor = {Douglas G. Altman and David Machin and Trevor N. Bryant and Martin J. Gardner},
            month = {February},
