@@ -5,12 +5,14 @@
 ###########################################################
 ## Version 1.1
 ###########################################################
-- madCI was modified for method = "boot" and is now no longer based on 
+- madCI was modified for method = "boot" and is no longer based on function
   quantileCI, but directly on function mad. It should now give better 
   confidence coverages.
-- minor modifications in mi.t.test: number of imputations is printed
+- minor modification in mi.t.test: number of imputations is printed
 - added method for S3 class amelia to mi.t.test (from package Amelia)
 - added method for S3 class mids to mi.t.test (from package mice)
+- added mi.wilcox.test for multiple imputation Wilcoxon tests (based on 
+  median p rule)
 
 
 ###########################################################
